# repucycle

./: Cargo.toml  README.md  canister_ids.json  dfx.json  package-lock.json  package.json
src/repu_cycle_backend/: Cargo.toml  repu_cycle_backend.did
src/repu_cycle_backend/src/: lib.rs  lib2.rs
src/repu_cycle_frontend/: package.json  vite.config.js
src/repu_cycle_frontend/src/: App.jsx
src/repu_cycle_frontend/src/components/: Footer.jsx  Footer.scss  Navbar.jsx  Navbar.scss
src/repu_cycle_frontend/src/pages/: Challenge.jsx  Home.jsx  Home.scss  Quiz.jsx
