[package]
name = "repu_cycle_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
ic-cdk = "0.6"
ic-cdk-macros = "0.6"
candid = "0.8"
md5 = "0.7"
serde = "1.0"
serde_cbor = "0.11"
serde_json = "1.0"
serde_derive = "1.0"
