[package]
name = "repu_cycle_backend"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
ic-cdk = "0.6"
ic-cdk-macros = "0.6"
candid = "0.8"
md5 = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_cbor = "0.11"
serde_json = "1.0"
sha2 = "0.10.5"
chrono = "0.4"
uuid = { version = "1", features = ["v4"] }
getrandom = { version = "0.2", features = ["js"] }

[dev-dependencies]

